--- a/Consumer1.ipynb
+++ b/Consumer1.ipynb
@@ -1284,7 +1284,7 @@
     "mydb = mysql.connector.connect(\n",
     "  host=\"localhost\",\n",
     "  user=\"root\",\n",
-    "  password=\"Famz@2002\",\n",
+    "  password=\"insert your pw\",\n",
     "  database=\"Stocks\"\n",
     ")\n",
     "\n",
