--- a/consumer2.ipynb
+++ b/consumer2.ipynb
@@ -1051,7 +1051,7 @@
     "cnx  = mysql.connector.connect(\n",
     "  host=\"localhost\",\n",
     "  user=\"root\",\n",
-    "  password=\"Famz@2002\",\n",
+    "  password=\"insert your pw\",\n",
     "  database=\"Stocks\"\n",
     ")\n",
     "\n",
