--- a/consumer3.ipynb
+++ b/consumer3.ipynb
@@ -2120,7 +2120,7 @@
     "mydb = mysql.connector.connect(\n",
     "  host=\"localhost\",\n",
     "  user=\"root\",\n",
-    "  password=\"Famz@2002\",\n",
+    "  password=\"insert your pw\",\n",
     "  database=\"Stocks\"\n",
     ")\n",
     "\n",
